<resources>
    <string name="app_name">TimeTable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days_title">Days</string>
    <string name="hours_title">Hours</string>
    <string name="minutes_title">Minutes</string>
    <string name="classes_title">Classes</string>
    <string name="homework_title">Homework</string>
    <string name="countdown_finish_title">Hope you\'re ready for exams</string>
    <string name="open_in">Open in</string>
    <string name="teacher">Teacher:</string>
    <string name="dash"> - </string>
    <string name="classes_today">classes today</string>
    <string name="class_today">class today</string>
    <string name="time_title">Today,</string>
    <string name="notifications_title">Notifications</string>
    <string name="list_title">List</string>
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="user_title">User</string>
    <string name="small_image_about_lesson">small image about lesson</string>
    <string name="clock_icon">clock icon</string>
    <string name="available_for_skype_call">available for skype call</string>
    <string name="image_about_homework">image about homework</string>
    <string name="home_title">Home</string>
    <string name="image_about_additional_lesson">image about additional lesson</string>
    <string name="notes_title">Notes</string>
    <string name="rating_title">Rating</string>
</resources>