<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="@style/TextViewTitleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8:45"/>

        <TextView
            android:id="@+id/textViewDash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewTitleStyle"
            android:text="@string/dash"
            app:layout_constraintStart_toEndOf="@id/textViewStartTime"
            app:layout_constraintTop_toTopOf="@id/textViewStartTime"/>

        <TextView
            android:id="@+id/textViewEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewTitleStyle"
            app:layout_constraintStart_toEndOf="@id/textViewDash"
            app:layout_constraintTop_toTopOf="@id/textViewDash"
            tools:text="9:30"/>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/darkgrey"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewStartTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewClassIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="36dp"
            android:background="@drawable/round_outline"
            android:padding="8dp"
            android:contentDescription="@string/small_image_about_lesson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/archery" />

        <TextView
            android:id="@+id/textViewClassName"
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/imageViewClassIcon"
            app:layout_constraintTop_toTopOf="@id/imageViewClassIcon"
            tools:text="History" />

        <TextView
            android:id="@+id/textViewTeacherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/teacher"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/imageViewClassIcon"
            app:layout_constraintTop_toBottomOf="@id/textViewClassName"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <TextView
            android:id="@+id/textViewClassTeacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/textViewTeacherTitle"
            app:layout_constraintStart_toEndOf="@id/textViewTeacherTitle"
            app:layout_constraintTop_toTopOf="@id/textViewTeacherTitle"
            tools:text="Mr. Andersen" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="300dp" />

        <LinearLayout
            android:id="@+id/viewIsRemote"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="horizontal"
            android:padding="24dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewCommon"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/open_in" />

            <ImageView
                android:contentDescription="@string/available_for_skype_call"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:src="@drawable/videocam_icon_24" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>