<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.HomeFragment"
    tools:background="@color/colorPrimaryDark">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/tvTimerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/are_you_ready_for_exams"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tvTimerTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="16dp"
                tools:text="33" />

            <TextView
                android:id="@+id/tvSeparator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="56sp"
                />

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:padding="16dp"
                tools:text="12" />

            <TextView
                android:id="@+id/tvSeparator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="56sp"
                android:padding="12dp"
               />


            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:padding="16dp"
                tools:text="05" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="36dp"
                android:gravity="fill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTime">

            <TextView
                android:id="@+id/tvDaysTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="56dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDays"
                app:layout_constraintEnd_toStartOf="@id/tvHoursTitle"/>

            <TextView
                android:id="@+id/tvHoursTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="60dp"
                app:layout_constraintStart_toEndOf="@id/tvDaysTitle"
                app:layout_constraintTop_toBottomOf="@id/tvHours"
                app:layout_constraintEnd_toStartOf="@id/tvMinutesTitle"/>

            <TextView
                android:id="@+id/tvMinutesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvHoursTitle"
                app:layout_constraintTop_toBottomOf="@id/tvMinutes" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/titleClasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/cvTimer"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/titleClasses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleHomework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/rvClasses"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/titleHomework"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>