<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvTimer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/light_green"
    app:cardCornerRadius="30dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textViewTimerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/are_you_ready_for_exams"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/textViewTimerTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="16dp"
                tools:text="33" />

            <TextView
                android:id="@+id/textViewSeparator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="56sp"
                />

            <TextView
                android:id="@+id/textViewHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:padding="16dp"
                tools:text="12" />

            <TextView
                android:id="@+id/textViewSeparator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="56sp"
                android:padding="12dp"
                />


            <TextView
                android:id="@+id/textViewMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_outline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:padding="16dp"
                tools:text="05" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="36dp"
            android:gravity="fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTime">

            <TextView
                android:id="@+id/textViewDaysTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="56dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDays"
                app:layout_constraintEnd_toStartOf="@id/textViewHoursTitle"/>

            <TextView
                android:id="@+id/textViewHoursTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="60dp"
                app:layout_constraintStart_toEndOf="@id/textViewDaysTitle"
                app:layout_constraintTop_toBottomOf="@id/textViewHours"
                app:layout_constraintEnd_toStartOf="@id/textViewMinutesTitle"/>

            <TextView
                android:id="@+id/textViewMinutesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewHoursTitle"
                app:layout_constraintTop_toBottomOf="@id/textViewMinutes" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
